Test Sandbox Project/src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>SFPS_SCS_AvgUpdateTime__c</fullName>
        <description>Average follow up update time by customer in minutes</description>
        <formula>if (ISNULL(SFPS_SCS_CumulativeUpdateTime__c) || ISNULL(SFPS_SCS_NumberUpdatePosts__c) || SFPS_SCS_NumberUpdatePosts__c = 0, NULL, SFPS_SCS_CumulativeUpdateTime__c / SFPS_SCS_NumberUpdatePosts__c)</formula>
        <label>Social AvgUpdateTime in Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFPS_SCS_Channel__c</fullName>
        <label>Social Channel</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFPS_SCS_CumulativeResponseTime__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Average cumulative response time by agent in minutes</description>
        <label>Social CumulativeResponseTime in Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFPS_SCS_CumulativeUpdateTime__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Average cumulative update time by customer in minutes</description>
        <label>Social CumulativeUpdateTime in Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFPS_SCS_FirstInboundPostAt__c</fullName>
        <description>Time when the first inbound post of the case occurs</description>
        <label>Social First Inbound Post At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFPS_SCS_FirstOutboundPostAt__c</fullName>
        <description>Time when the first outbound post of the case occurs</description>
        <label>Social First Outbound Post At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFPS_SCS_FirstResponseTime__c</fullName>
        <description>Social First Response time in minutes</description>
        <formula>if (SFPS_SCS_FirstOutboundPostAt__c &gt; SFPS_SCS_FirstInboundPostAt__c, (SFPS_SCS_FirstOutboundPostAt__c - SFPS_SCS_FirstInboundPostAt__c) * 24 * 60, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Social First Response Time in Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFPS_SCS_Influence__c</fullName>
        <label>Social Influence</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFPS_SCS_Language__c</fullName>
        <label>Social Language</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFPS_SCS_LastInboundPostAt__c</fullName>
        <description>Time when the last inbound post of the case occurs</description>
        <label>Social Last Inbound Post At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFPS_SCS_LastOutboundPostAt__c</fullName>
        <description>Time when the last outbound post of the case occurs</description>
        <label>Social Last Outbound Post At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFPS_SCS_LastPostAt__c</fullName>
        <description>Time when the last post of the case occurs</description>
        <label>Social Last Post At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFPS_SCS_LastPostRecordCreatedAt__c</fullName>
        <description>Time when the record of last post of the case takes place</description>
        <label>Social Last Post Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFPS_SCS_NPS_Original__c</fullName>
        <label>Social NPS Original</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Promoters</fullName>
                </value>
                <value>
                    <fullName>Passives</fullName>
                </value>
                <value>
                    <fullName>Detractors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFPS_SCS_NPS__c</fullName>
        <label>Social NPS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Promoters</fullName>
                </value>
                <value>
                    <fullName>Passives</fullName>
                </value>
                <value>
                    <fullName>Detractors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFPS_SCS_New_Post__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cases with new inbound(customer) post that hasn&apos;t been responded</description>
        <label>Social New Post</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFPS_SCS_NumberInboundPosts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of total inbound social posts</description>
        <label>Social Number of Inbound Posts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFPS_SCS_NumberOutboundPosts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of total outbound social posts</description>
        <label>Social Number of Outbound Posts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFPS_SCS_NumberPosts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of total social posts</description>
        <label>Social Number of Total Posts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFPS_SCS_NumberUpdatePosts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of follow-up update by customer after first response</description>
        <label>Social Number of Update Posts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFPS_SCS_Post_Original__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the initial post that creates the case</description>
        <label>Social Post</label>
        <referenceTo>SocialPost</referenceTo>
        <relationshipLabel>Cases (Social Post)</relationshipLabel>
        <relationshipName>SFPS_SCS_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFPS_SCS_Priority_Icon__c</fullName>
        <formula>CASE(
SFPS_SCS_Priority__c,
&apos;High&apos;, IMAGE(&apos;/resource/SFPS_SCS_Priority_High&apos;,&apos;&apos;,20,8),
&apos;Medium&apos;, &apos;&apos;,
&apos;Low&apos;, &apos;&apos;,
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Social Case Priority Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFPS_SCS_Priority__c</fullName>
        <label>Social Case Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFPS_SCS_Time_Span_NPS_Change__c</fullName>
        <description>Time taken for Social NPS Change (Detractor to Promoter)</description>
        <formula>(SFPS_SCS_Timestamp_NPS__c - SFPS_SCS_Timestamp_NPS_Original__c)*24</formula>
        <label>Social NPS Change in Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFPS_SCS_Timestamp_NPS_Original__c</fullName>
        <description>Time when Social NPS first logged to the case</description>
        <label>Social Timestamp NPS Original</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFPS_SCS_Timestamp_NPS__c</fullName>
        <description>Time when the current Social NPS first logged to the case</description>
        <label>Social Timestamp NPS</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SocialHandle__c</fullName>
        <formula>SFPS_SCS_Post_Original__r.Handle</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SocialHandle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Content__c</fullName>
        <label>Social Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Category2__c</fullName>
        <label>Sub Category 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Case_SubCategory_1__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Tidak menerima kode OTP</fullName>
                </value>
                <value>
                    <fullName>Ubah nomor Handphone</fullName>
                </value>
                <value>
                    <fullName>Lupa kata sandi</fullName>
                </value>
                <value>
                    <fullName>Belum diperpanjang</fullName>
                </value>
                <value>
                    <fullName>Belum aktif</fullName>
                </value>
                <value>
                    <fullName>Statistik</fullName>
                </value>
                <value>
                    <fullName>Badge tidak muncul</fullName>
                </value>
                <value>
                    <fullName>Kredit belum bertambah</fullName>
                </value>
                <value>
                    <fullName>Iklan belum muncul</fullName>
                </value>
                <value>
                    <fullName>Produk tidak aktif</fullName>
                </value>
                <value>
                    <fullName>Etalase hilang</fullName>
                </value>
                <value>
                    <fullName>Produk tidak muncul di etalase</fullName>
                </value>
                <value>
                    <fullName>Status produk tidak aktif</fullName>
                </value>
                <value>
                    <fullName>Berhenti berlangganan</fullName>
                </value>
                <value>
                    <fullName>Tidak muncul di etalase</fullName>
                </value>
                <value>
                    <fullName>Gambar hilang</fullName>
                </value>
                <value>
                    <fullName>Gagal upload</fullName>
                </value>
                <value>
                    <fullName>Di-banned</fullName>
                </value>
                <value>
                    <fullName>Dalam pengawasan</fullName>
                </value>
                <value>
                    <fullName>Tidak muncul di pencarian</fullName>
                </value>
                <value>
                    <fullName>Persentase transaksi berhasil</fullName>
                </value>
                <value>
                    <fullName>Jumlah reputasi tidak sesuai</fullName>
                </value>
                <value>
                    <fullName>Statistik produk terjual</fullName>
                </value>
                <value>
                    <fullName>Statistik transaksi berhasil</fullName>
                </value>
                <value>
                    <fullName>Statistik kepuasan toko</fullName>
                </value>
                <value>
                    <fullName>Kota asal belum tersedia</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Dana terdebet</fullName>
                </value>
                <value>
                    <fullName>Kartu tidak bisa digunakan</fullName>
                </value>
                <value>
                    <fullName>JNE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Category_3__c</fullName>
        <label>Sub Category 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pembayaran transfer bank belum diverifikasi</fullName>
                </value>
                <value>
                    <fullName>Salah input nama/nomor pemilik rekening saat checkout</fullName>
                </value>
                <value>
                    <fullName>Lupa menambahkan kode unik</fullName>
                </value>
                <value>
                    <fullName>Pembayaran yang ditransfer lebih</fullName>
                </value>
                <value>
                    <fullName>Pembayaran yang ditransfer kurang</fullName>
                </value>
                <value>
                    <fullName>Tidak bisa konfirmasi pembayaran</fullName>
                </value>
                <value>
                    <fullName>Salah rekening tujuan transfer</fullName>
                </value>
                <value>
                    <fullName>Status transaksi dibatalkan sistem</fullName>
                </value>
                <value>
                    <fullName>Kendala transfer bank lainnya</fullName>
                </value>
                <value>
                    <fullName>Pilih metode KlikBCA, tapi bayar dengan metode Transfer Bank</fullName>
                </value>
                <value>
                    <fullName>Salah mencantumkan user id KlikBCA</fullName>
                </value>
                <value>
                    <fullName>Nomor pembayaran tidak muncul di KlikBCA</fullName>
                </value>
                <value>
                    <fullName>Kendala klikBCA lainnya</fullName>
                </value>
                <value>
                    <fullName>Kode pembayaran tidak ditemukan</fullName>
                </value>
                <value>
                    <fullName>Salah mencantumkan kode pembayaran</fullName>
                </value>
                <value>
                    <fullName>Kendala indomaret/alfamart/sevel/pos lainnya</fullName>
                </value>
                <value>
                    <fullName>Kendala kartu kredit lainnya</fullName>
                </value>
                <value>
                    <fullName>Kendala saldo tokopedia lainnya</fullName>
                </value>
                <value>
                    <fullName>Kendala virtual account lainnya</fullName>
                </value>
                <value>
                    <fullName>Kendala BCA KlikPay/Mandiri ClickPay lainnya</fullName>
                </value>
                <value>
                    <fullName>Kendala BRI ePay lainnya</fullName>
                </value>
                <value>
                    <fullName>Dana terdebet lebih dari satu kali</fullName>
                </value>
                <value>
                    <fullName>Kendala pembayaran lainnya</fullName>
                </value>
                <value>
                    <fullName>Pesanan dibatalkan oleh penjual</fullName>
                </value>
                <value>
                    <fullName>Pesanan belum diproses/dikirim penjual</fullName>
                </value>
                <value>
                    <fullName>Salah informasi alamat tujuan</fullName>
                </value>
                <value>
                    <fullName>Kendala pesanan lainnya</fullName>
                </value>
                <value>
                    <fullName>Kendala pesanan dengan kartu kredit/cicilan lainnya</fullName>
                </value>
                <value>
                    <fullName>Kurir belum pickup barang</fullName>
                </value>
                <value>
                    <fullName>Kurir pertama tolak pickup / berkendala</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bank Transfer</fullName>
                </value>
                <value>
                    <fullName>Credit Card - Full Payment</fullName>
                </value>
                <value>
                    <fullName>Credit Card - Installment / Cicilan</fullName>
                </value>
                <value>
                    <fullName>BCA KlikPay</fullName>
                </value>
                <value>
                    <fullName>Login Issue</fullName>
                </value>
                <value>
                    <fullName>Pulsa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Handle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sub Handle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Resp__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Sub Resp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sum_Agent_Response__c</fullName>
        <label>Sum Agent Response</label>
        <summaryForeignKey>Agent_Response_Case__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tiket_ID__c</fullName>
        <externalId>true</externalId>
        <label>Tiket ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Active_Shop__c</fullName>
        <formula>TEXT(Account.Total_Active_Shop__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Active Shop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Purchases__c</fullName>
        <formula>Account.Total_Purchases__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URLsrc__c</fullName>
        <formula>IF(CONTAINS($Api.Enterprise_Server_URL_290,&quot;.force.com&quot;), 
MID( $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)), 
FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0))+1) - FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)) 
) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URLsrc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Summarizer__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Summarizer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Browser__c</fullName>
        <label>User_Browser</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chrome</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Firefox</fullName>
                </value>
                <value>
                    <fullName>Safari</fullName>
                </value>
                <value>
                    <fullName>Android webview</fullName>
                </value>
                <value>
                    <fullName>Opera</fullName>
                </value>
                <value>
                    <fullName>IE</fullName>
                </value>
                <value>
                    <fullName>Edge (Microsoft)</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Device__c</fullName>
        <label>User_Device</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ios</fullName>
                </value>
                <value>
                    <fullName>android</fullName>
                </value>
                <value>
                    <fullName>mobile</fullName>
                </value>
                <value>
                    <fullName>default_v3</fullName>
                </value>
                <value>
                    <fullName>Andriod App</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Desktop</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Mobile web browser</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>android_sellerapp</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>iOS App</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_OperatingSystem__c</fullName>
        <label>User_OperatingSystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Windows</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Macintosh</fullName>
                </value>
                <value>
                    <fullName>Android</fullName>
                </value>
                <value>
                    <fullName>Linux</fullName>
                </value>
                <value>
                    <fullName>iOS</fullName>
                </value>
                <value>
                    <fullName>Blackberry</fullName>
                </value>
                <value>
                    <fullName>Windows phone</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Phone_Model__c</fullName>
        <label>User_Phone_Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Samsung</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Apple</fullName>
                </value>
                <value>
                    <fullName>Xiaomi</fullName>
                </value>
                <value>
                    <fullName>Asus</fullName>
                </value>
                <value>
                    <fullName>Lenovo</fullName>
                </value>
                <value>
                    <fullName>Oppo</fullName>
                </value>
                <value>
                    <fullName>Sony</fullName>
                </value>
                <value>
                    <fullName>LG</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <formula>( DATEVALUE(CreatedDate) -
(
DATE(year(DATEVALUE(CreatedDate)),month(DATEVALUE(CreatedDate)),1) -
CASE( MOD( DATE(year(DATEVALUE(CreatedDate)),month(DATEVALUE(CreatedDate)),1) - DATE(1900, 1, 7), 7),
0, 3,
1, 4,
2, 5,
3, 6,
4, 0,
5, 1,
6, 2
,0)
)) / 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week ?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Created_At__c</fullName>
        <label>Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Initially_Assigned_At__c</fullName>
        <label>Initially Assigned At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Resolution_Time__c</fullName>
        <label>Resolution Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Solved_At__c</fullName>
        <label>Solved At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Updated_At__c</fullName>
        <label>Updated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_Ticket_ID__c</fullName>
        <label>Zendesk Ticket ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>is_Inbound_Case__c</fullName>
        <formula>IF(TEXT(Case_Created_By__c) == &apos;Customer&apos;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>is Inbound Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>is_Outbound_Case__c</fullName>
        <formula>IF(TEXT(Case_Created_By__c) == &apos;Agent&apos;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>is Outbound Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pkbgeolocalization__c</fullName>
        <description>Store the geolocalization of the customer on case creation from mobile.</description>
        <inlineHelpText>Where the customer was when the case has been created</inlineHelpText>
        <label>Customer Geolocalization</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>statusformilestone__c</fullName>
        <label>statusformilestone</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Esacalate L2</fullName>
                </value>
                <value>
                    <fullName>Escalated L2</fullName>
                </value>
                <value>
                    <fullName>Checking L2</fullName>
                </value>
                <value>
                    <fullName>Solved L2</fullName>
                </value>
                <value>
                    <fullName>Solved L3￼</fullName>
                </value>
                <value>
                    <fullName>Reopen</fullName>
                </value>
                <value>
                    <fullName>Solved</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Waiting on Customer</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Response Received</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Checking L3</fullName>
                </value>
                <value>
                    <fullName>Escalated L3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Category__c</columns>
        <columns>Case_SubCategory_1__c</columns>
        <columns>Sub_Category2__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>Need_Reply__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Email__c</columns>
        <columns>Tiket_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
        <sharedTo>
            <group>Common_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Need_Call</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Need_Call__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>All Need Call</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Need_Reply</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Need_Reply__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Web</value>
        </filters>
        <label>All Need Reply</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Open_Cases_webweb</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Web</value>
        </filters>
        <label>All Open Cases-webweb</label>
        <language>en_US</language>
        <sharedTo>
            <group>Common_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>B_L1_Digital_Train_Ticket_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Need_Reply__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ORIGIN</columns>
        <filterScope>Queue</filterScope>
        <label>B_L1 Digital + Train Ticket</label>
        <language>en_US</language>
        <queue>B_L1_Digital_Train_Ticket</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>B_L1_Fraud_Backend_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>B_L1 Fraud - Backend</label>
        <queue>B_L1_Fraud_Backend</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>B_L1_Fraud_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>Need_Reply__c</columns>
        <filterScope>Queue</filterScope>
        <label>B_L1 Fraud</label>
        <language>en_US</language>
        <queue>B_L1_Fraud</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>